--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     <div id="root"></div>
-    <script src="script.js"></script>
+    <script src="TodoModel.js"></script>
+    <script src="TodoView.js"></script>
+    <script src="TodoController.js"></script>
 </body>
 </html>
